--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ LazyData: true
 RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
+URL: https://github.com/GabryelM/Anuario-Dashboard-Interativo
+BugReports: https://github.com/GabryelM/Anuario-Dashboard-Interativo/issues
